// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outie tokenizer should correctly identify raw tokens 1`] = `
Array [
  RootToken {
    "children": Array [
      ModelKeyToken {
        "content": "greeting",
        "sourceTemplate": undefined,
      },
      RawToken {
        "content": " ",
        "sourceTemplate": undefined,
      },
      ModelKeyToken {
        "content": "name",
        "sourceTemplate": undefined,
      },
      RawToken {
        "content": " ",
        "sourceTemplate": undefined,
      },
      RawModelKeyToken {
        "content": "someHtml",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;

exports[`outie tokenizer should handle a string with a token at end 1`] = `
Array [
  RootToken {
    "children": Array [
      RawToken {
        "content": "hello ",
        "sourceTemplate": undefined,
      },
      ModelKeyToken {
        "content": "token",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;

exports[`outie tokenizer should handle a string with a token at start 1`] = `
Array [
  RootToken {
    "children": Array [
      ModelKeyToken {
        "content": "greeting",
        "sourceTemplate": undefined,
      },
      RawToken {
        "content": " name!",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;

exports[`outie tokenizer should handle a string with only a single token 1`] = `
Array [
  RootToken {
    "children": Array [
      ModelKeyToken {
        "content": "token",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;

exports[`outie tokenizer should handle a string with tokens at start and end 1`] = `
Array [
  RootToken {
    "children": Array [
      ModelKeyToken {
        "content": "greeting",
        "sourceTemplate": undefined,
      },
      RawToken {
        "content": " ",
        "sourceTemplate": undefined,
      },
      ModelKeyToken {
        "content": "name",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;

exports[`outie tokenizer should tokenize a simple token 1`] = `
Array [
  RootToken {
    "children": Array [
      RawToken {
        "content": "Hello, ",
        "sourceTemplate": undefined,
      },
      ModelKeyToken {
        "content": "name",
        "sourceTemplate": undefined,
      },
      RawToken {
        "content": "!",
        "sourceTemplate": undefined,
      },
    ],
    "content": "",
    "sourceTemplate": undefined,
  },
]
`;
